[package]
name = "pixelization"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.kmeans_colors]
version = "0.6"
features = ["palette"]

[dependencies.palette]
version = "0.7.3"
default-features = false
features = ["std"]

[dependencies]
image = "=0.24.9"


[dependencies.rand]
version = "0.8.5"
default-features = false
features = ["std"]